fixed the html and used aside element to set the left of the document. I also used flex in the main to get the document aligned as columns

--- a/trusat/docs/header.css
+++ b/trusat/docs/header.css
@@ -8,7 +8,7 @@
   text-transform: uppercase;
   padding-block-start: 3rem;
 }
-section:nth-of-type(1) nav ul {
+article nav ul {
   display: grid;
   grid-template-columns: repeat( 6, 145px);
   column-gap: 15px;
